@@ -64,6 +64,9 @@ public abstract class SqlOperation extends RdbmsOperation {
 		this.preparedStatementFactory = new PreparedStatementCreatorFactory(getSql(), getDeclaredParameters());
 		this.preparedStatementFactory.setResultSetType(getResultSetType());
 		this.preparedStatementFactory.setUpdatableResults(isUpdatableResults());
+		this.preparedStatementFactory.setReturnGeneratedKeys(isReturnGeneratedKeys());
+		if (getGeneratedKeysColumnNames() != null)
+			this.preparedStatementFactory.setGeneratedKeysColumnNames(getGeneratedKeysColumnNames());
 		this.preparedStatementFactory.setNativeJdbcExtractor(getJdbcTemplate().getNativeJdbcExtractor());
 
 		onCompileInternal();
